--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "find-namespace-value",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Find and return a value in an object namespace",
   "main": "lib/index.js",
   "scripts": {
@@ -11,6 +11,10 @@
     "namespace"
   ],
   "author": "dale tan <dale@1stdibs.com> (https://1stdibs.com)",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/1stdibs/find-namespace-value"
+  },
   "license": "MIT",
   "devDependencies": {
     "mocha": "^2.2.5"
