--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "babel-cli": "^6.1.2",
+    "babel-preset-es2015": "^6.1.2",
     "mocha": "^2.2.5"
   }
 }
